# ActiveChain

./: .gitignore  .gitmodules  AGENTS.md  BLUEPRINT.md  CASH.md  Cargo.toml  DECENTRALIZATION.md  MINT.md  PQVM.md  README.md  REWARDS.md  STACK.md  STATUS.md  WALLET.md  WEBSPEC.md
.github/workflows/: apple-distribution.yml  (+2 more)
crates/action-kernel/: Cargo.toml
crates/action-kernel/src/: lib.rs  tests.rs  types.rs
crates/application-primitives/: Cargo.toml
crates/application-primitives/examples/: anchor_vector.rs
crates/application-primitives/src/: anchor.rs  lib.rs
crates/authorization-kernel/: Cargo.toml
crates/authorization-kernel/src/: lib.rs
crates/bytecode-verifier/: Cargo.toml
crates/bytecode-verifier/src/: bytecode.rs  lib.rs  tests.rs  verify.rs
crates/canonical-codec/: Cargo.toml
crates/canonical-codec/src/: kani_proofs.rs  lib.rs
crates/cash-air/: Cargo.toml
crates/cash-air/src/: lib.rs  session.rs  shake.rs
crates/cash-kernel/: Cargo.toml
crates/cash-kernel/src/: air.rs  authenticated.rs  economics.rs  lib.rs  partitioned.rs  transition.rs  types.rs
crates/consensus-runtime/: Cargo.toml
crates/consensus-runtime/src/: finalized_block.rs  lib.rs  pq_session.rs  proof_pipeline.rs
crates/consensus-verifier/: Cargo.toml
crates/consensus-verifier/src/: lib.rs
crates/credential/: Cargo.toml
crates/credential/src/: lib.rs  tests.rs  verify.rs
crates/crypto-provider/: Cargo.toml
crates/crypto-provider/src/: lib.rs
crates/devnet-kernel/: Cargo.toml
crates/devnet-kernel/src/: apply.rs  lib.rs  tests.rs  types.rs
crates/finality-types/: Cargo.toml
crates/finality-types/src/: lib.rs
crates/light-client/: Cargo.toml
crates/light-client/src/: lib.rs
crates/object/: Cargo.toml
crates/object-vm/: Cargo.toml
crates/object-vm/kani-workspace/: Cargo.toml
crates/object-vm/kani-workspace/bytecode-verifier/: Cargo.toml
crates/object-vm/kani-workspace/object-vm/: Cargo.toml
crates/object-vm/src/: evidence.rs  execute.rs  lib.rs  tests.rs  value.rs
crates/object-vm/src/execute/: kani_proofs.rs
crates/object/src/: lib.rs
crates/pq-zk/: Cargo.toml
crates/pq-zk-methods/: Cargo.toml  build.rs
crates/pq-zk-methods/guest/: Cargo.toml
crates/pq-zk-methods/guest/src/: main.rs
crates/pq-zk-methods/src/: lib.rs
crates/pq-zk/src/: lib.rs
crates/privacy-kernel/: Cargo.toml
crates/privacy-kernel/src/: builder.rs  lib.rs  network.rs  persistence.rs  protected.rs  tests.rs
crates/private-billboard/: Cargo.toml
crates/private-billboard/src/: lib.rs  tests.rs
crates/protocol-commitment/: Cargo.toml
crates/protocol-commitment/src/: lib.rs
crates/protocol-types/: Cargo.toml
crates/protocol-types/src/: admission.rs  authority.rs  checked_arithmetic.rs  consensus.rs  consensus_state.rs  credential.rs  crypto.rs  lib.rs  migration.rs  object.rs  package.rs
crates/rpc-server/: Cargo.toml
crates/rpc-server/src/: access.rs  lib.rs
crates/rpc-types/: Cargo.toml
crates/rpc-types/src/: lib.rs
crates/state-tree/: Cargo.toml
crates/state-tree/src/: hash.rs  lib.rs  proof.rs  tests.rs  tree.rs
crates/transition/: Cargo.toml
crates/transition/src/: apply.rs  lib.rs  tests.rs  types.rs
crates/verifier-api/: Cargo.toml
crates/verifier-api/include/: activechain_verifier.h
crates/verifier-api/src/: lib.rs
crates/verifier-ffi/: Cargo.toml
crates/verifier-ffi/kani-workspace/: Cargo.toml
crates/verifier-ffi/kani-workspace/action-kernel/: Cargo.toml
crates/verifier-ffi/kani-workspace/api/: Cargo.toml
crates/verifier-ffi/kani-workspace/canonical-codec/: Cargo.toml
crates/verifier-ffi/kani-workspace/capability/: Cargo.toml
crates/verifier-ffi/kani-workspace/consensus-verifier/: Cargo.toml
crates/verifier-ffi/kani-workspace/devnet-kernel/: Cargo.toml
crates/verifier-ffi/kani-workspace/ffi/: Cargo.toml
crates/verifier-ffi/kani-workspace/finality-types/: Cargo.toml
crates/verifier-ffi/kani-workspace/object/: Cargo.toml
crates/verifier-ffi/kani-workspace/policy-kernel/: Cargo.toml
crates/verifier-ffi/kani-workspace/protocol-commitment/: Cargo.toml
crates/verifier-ffi/kani-workspace/protocol-types/: Cargo.toml
crates/verifier-ffi/kani-workspace/state-tree/: Cargo.toml
crates/verifier-ffi/kani-workspace/transition/: Cargo.toml
crates/verifier-ffi/src/: kani_proofs.rs  lib.rs
crates/wallet-core/: Cargo.toml
crates/wallet-core/src/: agent_management.rs  cash_authorization.rs  cash_persistence.rs  lib.rs  openwallet.rs
docs/: SECURITY_AUDIT.md  TESTNET_RELEASE.md  mobile-wallet.md  pq-migration-policy.md  testnet-operations.md  wallet-agent-management.md
formal/: APL_REFINEMENT_PROOF_SCOPE.md  AUTHORIZATION_CHAIN_PROOF_SCOPE.md  BLOCK_COMPOSITION_PROOF_SCOPE.md  CASH_AUTHORIZATION_PROOF_SCOPE.md  CONSENSUS_PROOF_SCOPE.md  CONSENSUS_TLA_PROOF_SCOPE.md  DA_PROOF_SCOPE.md  ENVELOPE_PROOF_SCOPE.md  EPOCH_UPGRADE_PROOF_SCOPE.md  IDENTITY_PROOF_SCOPE.md  KANI_CODEC_PROOF_SCOPE.md  KANI_OBJECT_VM_PROOF_SCOPE.md  KANI_PROTOCOL_TYPES_PROOF_SCOPE.md  KANI_VERIFIER_FFI_PROOF_SCOPE.md  PQ_SESSION_PROOF_SCOPE.md  PROOF_PIPELINE_TLA_PROOF_SCOPE.md  README.md  RECONFIGURATION_LIVENESS_TLA_PROOF_SCOPE.md  STATE_TREE_REFINEMENT_PROOF_SCOPE.md  TRACE_CONFORMANCE_SCOPE.md  VERUS_ARITHMETIC_PROOF_SCOPE.md  WALLET_PROOF_SCOPE.md  WEIGHTED_CONSENSUS_PROOF_SCOPE.md  proof-scope-index-v1.tsv
mobile/: README.md
schema/: activechain.idl
scripts/: build-android-wallet-library.sh  build-apple-distribution.sh  build-ios-wallet-app.sh  build-macos-wallet-app.sh  check-apple-distribution.sh  check-apple-reproducibility.sh  check-formal-coverage.py  check-formal-models.sh  check-kani-codec.sh  check-kani-commitment.sh  check-kani-object-vm.sh  check-kani-protocol-types.sh  check-kani-verifier-ffi.sh  check-proof-conformance.sh  check-proof-scopes.py  check-tla-consensus.sh  check-tla-proof-pipeline.sh  check-verifier-manifest.sh  rehearse-live-process-quorum.sh  rehearse-testnet-wallet-acceptance.sh  rehearse-validator-processes.sh  test-amber-app.sh  validate-apple-app-icon.sh
testing/: proof-conformance-v1.tsv
(+516 files in other folders)
