[workspace]
members = [
    "crates/canonical-codec",
    "crates/capability",
    "crates/principal",
    "crates/protocol-commitment",
    "crates/protocol-types",
    "tools/vector-generator",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97.1"
repository = "https://github.com/advatar/ActiveChain"

[workspace.dependencies]
activechain-canonical-codec = { path = "crates/canonical-codec", version = "0.1.0" }
activechain-capability = { path = "crates/capability", version = "0.1.0" }
activechain-principal = { path = "crates/principal", version = "0.1.0" }
activechain-protocol-types = { path = "crates/protocol-types", version = "0.1.0" }
proptest = { version = "1.7.0", default-features = false, features = ["std"] }
sha3 = { version = "0.10.8", default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"

[profile.release]
overflow-checks = true
panic = "abort"
strip = "symbols"
