[workspace]
members = [
    "crates/action-kernel",
    "crates/bytecode-verifier",
    "crates/canonical-codec",
    "crates/crypto-provider",
    "crates/consensus-runtime",
    "crates/data-availability",
    "crates/capability",
    "crates/cash-kernel",
    "crates/wallet-core",
    "crates/verifier-api",
    "crates/verifier-ffi",
    "crates/wallet-ffi",
    "crates/credential",
    "crates/devnet-kernel",
    "crates/object",
    "crates/object-vm",
    "crates/policy-kernel",
    "crates/principal",
    "crates/protocol-commitment",
    "crates/protocol-types",
    "crates/state-tree",
    "crates/transition",
    "node/semantic-devnet",
    "tools/vector-generator",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97.1"
repository = "https://github.com/advatar/ActiveChain"

[workspace.dependencies]
activechain-action-kernel = { path = "crates/action-kernel", version = "0.1.0" }
activechain-bytecode-verifier = { path = "crates/bytecode-verifier", version = "0.1.0" }
activechain-canonical-codec = { path = "crates/canonical-codec", version = "0.1.0" }
activechain-crypto-provider = { path = "crates/crypto-provider", version = "0.1.0" }
activechain-data-availability = { path = "crates/data-availability", version = "0.1.0" }
activechain-capability = { path = "crates/capability", version = "0.1.0" }
activechain-cash-kernel = { path = "crates/cash-kernel", version = "0.1.0" }
activechain-protocol-commitment = { path = "crates/protocol-commitment", version = "0.1.0" }
activechain-wallet-core = { path = "crates/wallet-core", version = "0.1.0" }
activechain-wallet-ffi = { path = "crates/wallet-ffi", version = "0.1.0" }
activechain-verifier-api = { path = "crates/verifier-api", version = "0.1.0" }
activechain-verifier-ffi = { path = "crates/verifier-ffi", version = "0.1.0" }
activechain-credential = { path = "crates/credential", version = "0.1.0" }
activechain-devnet-kernel = { path = "crates/devnet-kernel", version = "0.1.0" }
activechain-object = { path = "crates/object", version = "0.1.0" }
activechain-object-vm = { path = "crates/object-vm", version = "0.1.0" }
activechain-policy-kernel = { path = "crates/policy-kernel", version = "0.1.0" }
activechain-principal = { path = "crates/principal", version = "0.1.0" }
activechain-protocol-types = { path = "crates/protocol-types", version = "0.1.0" }
activechain-state-tree = { path = "crates/state-tree", version = "0.1.0" }
activechain-transition = { path = "crates/transition", version = "0.1.0" }
proptest = { version = "1.7.0", default-features = false, features = ["std"] }
sha3 = { version = "0.10.8", default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"

[profile.release]
overflow-checks = true
panic = "abort"
strip = "symbols"
