[package]
name = "activechain-cash-air"
description = "Transparent specialized STARK constraints for ActiveChain cash batches"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
activechain-cash-kernel.workspace = true
activechain-canonical-codec.workspace = true
activechain-protocol-types.workspace = true
activechain-wallet-core.workspace = true
p3-air.workspace = true
p3-baby-bear.workspace = true
p3-challenger.workspace = true
p3-commit.workspace = true
p3-dft.workspace = true
p3-field.workspace = true
p3-fri.workspace = true
p3-keccak.workspace = true
p3-keccak-air.workspace = true
p3-merkle-tree.workspace = true
p3-matrix.workspace = true
p3-sha256.workspace = true
p3-symmetric.workspace = true
p3-uni-stark.workspace = true
sha3.workspace = true
winterfell.workspace = true

[lints]
workspace = true
