[package]
name = "activechain-cash-kernel"
description = "Canonical native-money schemas and pure Coin Cell transitions for ActiveChain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
activechain-canonical-codec.workspace = true
activechain-protocol-commitment = { path = "../protocol-commitment", version = "0.1.0" }
activechain-protocol-types.workspace = true
activechain-privacy-kernel.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
