[package]
name = "activechain-consensus-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
activechain-crypto-provider.workspace = true
activechain-protocol-types.workspace = true
activechain-canonical-codec.workspace = true
sha3.workspace = true

[lints]
workspace = true

[dev-dependencies]
ml-dsa = "0.1.1"
