[package]
name = "activechain-consensus-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
activechain-crypto-provider.workspace = true
activechain-protocol-types.workspace = true
activechain-canonical-codec.workspace = true
activechain-action-kernel.workspace = true
activechain-data-availability.workspace = true
activechain-devnet-kernel.workspace = true
activechain-finality-types.workspace = true
activechain-state-tree.workspace = true
activechain-cash-kernel.workspace = true
activechain-wallet-core.workspace = true
activechain-object-vm.workspace = true
activechain-privacy-kernel.workspace = true
activechain-rpc-server.workspace = true
sha3.workspace = true
ml-dsa = "0.1.1"
getrandom = "0.3"

[dev-dependencies]
activechain-transition.workspace = true

[lints]
workspace = true
