[package]
name = "activechain-consensus-verifier"
description = "Pure no_std PQ consensus signature and quorum verification"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
activechain-protocol-types.workspace = true
ml-dsa = "0.1.1"
sha3.workspace = true

[lints]
workspace = true
