[package]
name = "activechain-crypto-provider"
description = "Reviewed post-quantum cryptographic provider boundary"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
ml-dsa = "0.1.1"
ml-kem = { version = "0.3.2", features = ["getrandom"] }
activechain-protocol-types.workspace = true

[lints]
workspace = true
