[package]
name = "activechain-light-client"
description = "Embeddable persistent ActiveChain light client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
activechain-canonical-codec.workspace = true
activechain-consensus-verifier.workspace = true
activechain-data-availability.workspace = true
activechain-finality-types.workspace = true
activechain-protocol-types.workspace = true
activechain-rpc-server.workspace = true
activechain-rpc-types.workspace = true
sha3.workspace = true

[dev-dependencies]
activechain-data-availability.workspace = true
activechain-state-tree.workspace = true
ml-dsa = "0.1.1"

[lints]
workspace = true
