[package]
name = "activechain-object-vm"
description = "Deterministic metered ObjectVM reference interpreter for ActiveChain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
activechain-bytecode-verifier.workspace = true
activechain-canonical-codec.workspace = true
activechain-protocol-types.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
