[package]
name = "activechain-object"
description = "Pure versioned object transitions for ActiveChain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
activechain-protocol-types.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
