[package]
name = "activechain-pq-zk"
description = "ActiveChain transparent post-quantum zero-knowledge STARK profile"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[features]
default = ["reproducible-build"]
reproducible-build = ["activechain-pq-zk-methods/reproducible-build"]

[dependencies]
activechain-canonical-codec.workspace = true
activechain-private-billboard.workspace = true
activechain-pq-zk-methods = { path = "../pq-zk-methods" }
activechain-protocol-types.workspace = true
risc0-zkvm = { workspace = true, features = ["client", "disable-dev-mode", "prove"] }
sha3.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
