[package]
name = "activechain-privacy-kernel"
description = "Bounded canonical privacy statements and fail-closed nullifier admission for ActiveChain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
activechain-canonical-codec.workspace = true
activechain-protocol-commitment.workspace = true
activechain-protocol-types.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
