[package]
name = "activechain-private-billboard"
description = "Reference private billboard vertical slice for ActiveChain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
activechain-canonical-codec.workspace = true
activechain-cash-kernel.workspace = true
activechain-crypto-provider.workspace = true
activechain-privacy-kernel.workspace = true
activechain-protocol-commitment.workspace = true
activechain-protocol-types.workspace = true
sha3.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
