[package]
name = "activechain-protocol-commitment"
description = "SHAKE256/384 domain-separated commitments for ActiveChain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
activechain-canonical-codec.workspace = true
activechain-protocol-types.workspace = true
sha3.workspace = true

[lints]
workspace = true
