[package]
name = "activechain-protocol-types"
description = "Canonical primitive and protocol object types for ActiveChain"
version.workspace = true
edition.workspace = true
# Kani 0.67's pinned Rust 1.93 compiler verifies this boundary crate.
rust-version = "1.93"
repository.workspace = true
publish = false

[dependencies]
activechain-canonical-codec.workspace = true
sha3.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
