[package]
name = "activechain-rpc-server"
description = "Durable bounded development-network RPC service and client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
activechain-canonical-codec.workspace = true
activechain-protocol-types.workspace = true
activechain-rpc-types.workspace = true
sha3.workspace = true

[lints]
workspace = true
