[package]
name = "activechain-rpc-server"
description = "Durable bounded development-network RPC service and client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
activechain-action-kernel.workspace = true
activechain-canonical-codec.workspace = true
activechain-consensus-verifier.workspace = true
activechain-finality-types.workspace = true
activechain-protocol-types.workspace = true
activechain-rpc-types.workspace = true
activechain-verifier-api.workspace = true
sha3.workspace = true

[dev-dependencies]
activechain-devnet-kernel.workspace = true
activechain-policy-kernel.workspace = true
activechain-protocol-commitment.workspace = true
activechain-state-tree.workspace = true
activechain-transition.workspace = true
ml-dsa = "0.1.1"

[lints]
workspace = true
