[package]
name = "activechain-rpc-types"
description = "Canonical bounded development-network RPC wire contract"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
activechain-canonical-codec.workspace = true
activechain-protocol-types.workspace = true

[lints]
workspace = true
