[package]
name = "activechain-state-tree"
description = "Canonical sparse SHAKE state tree and witnesses for ActiveChain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
activechain-canonical-codec.workspace = true
activechain-protocol-types.workspace = true
sha3.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
