[package]
name = "activechain-transition"
description = "Bounded atomic reference state transition for ActiveChain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
activechain-canonical-codec.workspace = true
activechain-object.workspace = true
activechain-policy-kernel.workspace = true
activechain-protocol-commitment = { path = "../protocol-commitment", version = "0.1.0" }
activechain-protocol-types.workspace = true

[lints]
workspace = true
