[package]
name = "activechain-verifier-api"
description = "Bounded language-neutral envelope inspection for ActiveChain verifiers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
activechain-canonical-codec.workspace = true

[lints]
workspace = true
