[package]
name = "activechain-verifier-api"
description = "Bounded language-neutral envelope inspection for ActiveChain verifiers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
activechain-capability.workspace = true
activechain-canonical-codec.workspace = true
activechain-policy-kernel.workspace = true
activechain-protocol-types.workspace = true
sha3.workspace = true

[lints]
workspace = true
