[package]
name = "activechain-verifier-api"
description = "Bounded language-neutral envelope inspection for ActiveChain verifiers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
activechain-application-primitives.workspace = true
activechain-action-kernel.workspace = true
activechain-capability.workspace = true
activechain-canonical-codec.workspace = true
activechain-consensus-verifier.workspace = true
activechain-devnet-kernel.workspace = true
activechain-finality-types.workspace = true
activechain-policy-kernel.workspace = true
activechain-protocol-commitment = { path = "../protocol-commitment", version = "0.1.0" }
activechain-protocol-types.workspace = true
activechain-state-tree.workspace = true
sha3.workspace = true

[dev-dependencies]
ml-dsa = "0.1.1"

[lints]
workspace = true
