[package]
name = "activechain-wallet-core"
description = "OpenWallet-aligned ActiveChain wallet primitives for PQ identity and Coin Cell intents"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
activechain-canonical-codec.workspace = true
activechain-cash-kernel.workspace = true
activechain-protocol-types.workspace = true
activechain-protocol-commitment.workspace = true
ml-dsa = "0.1.1"
sha3.workspace = true

[lints]
workspace = true
